--- a/src/components/DiscArcadeModeGame.css
+++ b/src/components/DiscArcadeModeGame.css
@@ -1,28 +1,20 @@
 
 .arcade-game-container {
-  position: relative;
-  width: 100%;
-  height: 100vh;
   background-size: cover;
   background-position: center;
+  background-color: transparent;
+  color: white;
+  text-align: center;
+  font-family: "Gameplay", sans-serif;
+  padding: 20px;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-}
+  position: relative;
 
-.countdown-display {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.7);
-  color: white;
-  padding: 20px;
-  border-radius: 10px;
-  font-size: 2rem;
-  text-align: center;
-  z-index: 10;
 }
 
 .retro-top-section {
@@ -47,38 +39,47 @@
 }
 
 .retro-score-display {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: bold;
   color: white;
-  margin: 20px 0;
+  text-align: center;
+}
+.game-name {
+  font-size: 2rem;
+  font-weight: bold;
+  color: white;
   text-align: center;
 }
 
 .retro-game-board {
   display: grid;
+  background: rgb(29, 45, 18);
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(3, 1fr);
-  gap: 5px;
-  width: 300px;
-  height: 300px;
-  max-width: 90%;
-  max-height: 90%;
-  border: 4px solid rgb(255, 255, 255);
-  padding: 25px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.7);
-  background-color: rgba(0, 0, 0, 0.5);
+  gap: 10px; 
+  margin: 20px auto; 
+  width: calc(714px - 2 * 7px); 
+  height: calc(714px - 2 * 7px);
+  padding: 10px;
+  border: 7px solid #fff;
+  box-sizing: border-box;
 }
 
 .retro-board-cell {
-  display: grid;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  border: 4px solid white;
-  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center; 
+  justify-content: center; 
+  background: rgba(0, 0, 0, 0.2); 
+  border: 7px solid #ffffff; 
+  margin-bottom: 12px;
+  transition: background 0.3s ease;
   cursor: pointer;
+  overflow: visible;
+}
+
+.retro-board-cell{
+  width: 99%; 
+  height: 99%; 
 }
 
 .retro-board-cell.bonus-cell {
@@ -89,26 +90,29 @@
   background-color: #00bfff; 
 }
 
-.retro-disc-pile {
-  text-align: center;
-  margin-top: 20px;
-}
-
 .retro-disc-stack {
+  
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 100px;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  width: 90%;
 }
 
 .normal-disc-stack,
 .bonus-disc-stack {
+
+  display: flex;
+  align-items: center;
+  gap: 20px; 
+ 
+}
+
+.stack-container{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   position: relative;
-  
   width: 100px; 
   height: 100px; 
   margin-bottom: 20px; 
@@ -143,6 +147,39 @@
   font-size: 1rem;
   color: white;
   margin-bottom: 5px;
+}
+
+.start-button{
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 12px 25px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 18px;
+  margin-top: 20px;
+}
+
+.pawn-icon {
+  width: 200px;
+  position: absolute;
+  right: 10px;
+  top: 10%;
+  transform: translateY(-50%);
+}
+
+.star-icon {
+  width: 40px;
+  position: absolute;
+  left: 400px;
+  top: 13%;
+}
+
+.game-remote {
+ width: 200px;
+  position: absolute;
+  bottom: 10%;
+  right: 10px;
 }
 
 @keyframes shrink {
