--- a/src/components/GameofAim.css
+++ b/src/components/GameofAim.css
@@ -26,8 +26,8 @@
     position: relative;
   }
   
-  .team-aim.team-a-aim,
-  .team-aim.team-b-aim {
+  .team team-a-aim,
+  .team team-b-aim {
     padding: 2px;
     border-radius: 10px;
     width: 100px;
@@ -36,24 +36,25 @@
     border: 2px solid #ffffff;
   }
   
-  .team-aim img.player-icon {
+  .player-icon-aim {
     width: 70px;
     height: 70px;
     border-radius: 50%;
     margin: 10px auto;
     border: 2px solid white;
+    margin-bottom: 15px;
   }
   
   .stats-box-aim {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 0px;
-    padding: 5px;
+    gap: 2px;
+    padding: 8px;
     background: rgb(29, 45, 18);
     border-radius: 15px;
     border: 2px solid #fff;
-    width: 110px;
+    width: 170px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
   }
   
@@ -71,7 +72,7 @@
   .stat1-aim span,
   .stat2-aim span {
     display: inline-block;
-    padding: 15px;
+    padding: 20px;
     margin-top: 10px;
     font-size: 3rem;
     font-weight: bold;
@@ -79,10 +80,11 @@
     color: #fff;
     border: 1px solid #ffffff;
     border-radius: 8px;
-    width: 90px;
-    height: 90px;
+    width: 120px;
+    /* height: 120px; */
     align-items: center;
     text-align: center;
+    margin-top: 0.3em;
   }
   
   .stat2-aim span {
