--- a/src/components/LightsOutWorld.css
+++ b/src/components/LightsOutWorld.css
@@ -18,6 +18,11 @@
 
 .lights-scoreboard {
     display: flex;
+    justify-content: space-between;
+    width: 90%;
+    margin-top: 20px;
+   
+    /* display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -26,7 +31,23 @@
     max-width: 600px;
     font-size: 1.2rem;
     color: #fff;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7); */
+}
+
+.lights-time-display,
+.lights-misses-display,
+.lights-disc-display {
+  display: flex;
+  align-items: center;
+  font-size: 1.5rem;
+}
+
+.lights-time-display img,
+.lights-misses-display img,
+.lights-disc-display img {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
 }
 
 .lights-game-title {
@@ -94,15 +115,15 @@
 }
 
 .lights-back-button {
-    margin-top: 20px;
-    padding: 10px 20px;
-    font-size: 1rem;
-    color: #fff;
-    background-color: #f00;
+    background-color: #4caf50;
+    color: white;
     border: none;
+    padding: 12px 25px;
+    border-radius: 8px;
     cursor: pointer;
+    font-size: 18px;
+    margin-top: 20px;
     text-transform: uppercase;
-    transition: background-color 0.3s ease;
 }
 
 .lights-back-button:hover {
