--- a/src/components/AimPointGame.css
+++ b/src/components/AimPointGame.css
@@ -14,26 +14,39 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: #0e1b0e;
-  color: white;
-  height: 100vh;
-  padding: 20px; */
+
 }
 
 .game-board-point {
   display: grid;
+  background: rgb(29, 45, 18);
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px; 
+  margin: 20px auto; 
+  width: calc(714px - 2 * 7px); 
+  height: calc(714px - 2 * 7px);
+  padding: 10px;
+  border: 7px solid #fff;
+  box-sizing: border-box;
+  /* display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
-  margin: 20px 0;
+  margin: 20px 0; */
 }
 
 .board-cell-point {
-  width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.2); 
+  border: 7px solid #ffffff; 
+  transition: background 0.3s ease; 
+  cursor: pointer;
+  overflow: visible; 
+  width: 99%; 
+  height: 99%; 
+  /* width: 100px;
   height: 100px;
   background-color: #202c20;
   border: 2px solid white;
@@ -41,7 +54,7 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease; */
 }
 
 .active-target-point {
