--- a/src/styles/GameSelectionPage.css
+++ b/src/styles/GameSelectionPage.css
@@ -70,8 +70,13 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
   width: 100%;
-  max-width: 800px;
+  max-width: 710px;
   margin-top: 20px;
+}
+
+.games-grid > :nth-child(5) {
+  grid-column: span 2; 
+  justify-self: center; 
 }
 
 .game-card {
@@ -92,7 +97,7 @@
   padding: 15px;
 }
 
-.game-title {
+.game-title-selection {
   font-family: "Gameplay", sans-serif;
   font-size: 22px;
   line-height: 20px;
@@ -110,6 +115,7 @@
   font-size: 1rem;
   color: #ffffff;
   margin: 10px 0;
+  
 }
 
 .game-price.hidden {
