--- a/src/components/AimPointGame.css
+++ b/src/components/AimPointGame.css
@@ -29,10 +29,7 @@
   padding: 10px;
   border: 7px solid #fff;
   box-sizing: border-box;
-  /* display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
-  margin: 20px 0; */
+
 }
 
 .board-cell-point {
@@ -46,15 +43,7 @@
   overflow: visible; 
   width: 99%; 
   height: 99%; 
-  /* width: 100px;
-  height: 100px;
-  background-color: #202c20;
-  border: 2px solid white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  transition: background-color 0.3s ease; */
+
 }
 
 .active-target-point {
@@ -90,6 +79,139 @@
   font-size: 18px;
   font-weight: bold;
   margin-top: 10px;
+}
+
+
+.pawn-icon-point {
+  width: 200px;
+  position: absolute;
+  right: 10px;
+  top: 10%;
+  transform: translateY(-50%);
+}
+
+.star-icon-point {
+  width: 40px;
+  position: absolute;
+  left: 5%;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.game-remote-point {
+  width: 200px;
+  position: absolute;
+  bottom: 10%;
+  right: 10px;
+}
+
+/* Responsive Styles */
+
+/* Large Devices (Desktops, >1024px) */
+@media screen and (min-width: 1024px) {
+  .game-board-point {
+    width: calc(700px - 2 * 7px);
+    height: calc(700px - 2 * 7px);
+    gap: 20px;
+  }
+
+  .board-cell-point {
+    border-width: 8px;
+  }
+
+  .pawn-icon-point {
+    width: 250px;
+    top: 5%;
+    right: 5%;
+  }
+
+  .game-remote-point {
+    width: 250px;
+    bottom: 5%;
+    right: 5%;
+  }
+}
+
+/* Extra Large Devices (>1440px) */
+@media screen and (min-width: 1440px) {
+  .game-board-point {
+    width: calc(900px - 2 * 7px);
+    height: calc(900px - 2 * 7px);
+    gap: 30px;
+  }
+
+  .board-cell-point {
+    border-width: 10px;
+  }
+
+  .pawn-icon-point {
+    width: 350px;
+    top: 5%;
+    right: 5%;
+  }
+
+  .game-remote-point {
+    width: 350px;
+    bottom: 5%;
+    right: 5%;
+  }
+}
+
+/* Tablets (768px to 1024px) */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .game-board-point {
+    width: calc(500px - 2 * 7px);
+    height: calc(500px - 2 * 7px);
+    gap: 15px;
+  }
+
+  .board-cell-point {
+    border-width: 6px;
+  }
+
+  .pawn-icon-point {
+    width: 200px;
+    top: 10%;
+    right: 10%;
+  }
+
+  .game-remote-point {
+    width: 200px;
+    bottom: 10%;
+    right: 10%;
+  }
+}
+
+/* Small Devices (Phones, <768px) */
+@media screen and (max-width: 767px) {
+  .game-board-point {
+    width: calc(250px - 2 * 7px);
+    height: calc(250px - 2 * 7px);
+    gap: 10px;
+  }
+
+  .board-cell-point {
+    border-width: 4px;
+  }
+
+  .pawn-icon-point, .star-icon-point, .game-remote-point {
+    display: none; 
+  }
+}
+
+
+.pawn-icon-point, .star-icon-point, .game-remote-point {
+  z-index: 1;
+  visibility: visible;
+}
+
+.game-board-point, .scoreboard-point {
+  position: relative;
+  z-index: 2;
+}
+
+.pawn-icon-point.overlap, .star-icon-point.overlap, .game-remote-point.overlap {
+  visibility: hidden;
 }
 
 /* copy
