--- a/src/components/PaymentTran.css
+++ b/src/components/PaymentTran.css
@@ -56,7 +56,7 @@
 
 .play-button,
 .continue-button {
-  background-color: #4caf50;
+  background-color: #399F2E;;
   color: white;
   border: none;
   padding: 12px 25px;
