--- a/src/components/PlayersQueue.css
+++ b/src/components/PlayersQueue.css
@@ -80,7 +80,7 @@
   
   .close-button {
     margin-top: 20px;
-    background-color: #4caf50;
+    background-color: #399F2E;
     color: white;
     border: none;
     padding: 10px 20px;
