--- a/src/styles/GameSelectionPage.css
+++ b/src/styles/GameSelectionPage.css
@@ -125,7 +125,7 @@
 .play-button {
   width: 100%;
   padding: 10px;
-  background-color: #007f40;
+  background-color: #399F2E;;
   color: white;
   border: none;
   border-radius: 0 0 10px 10px;
