--- a/src/styles/SigninPage.css
+++ b/src/styles/SigninPage.css
@@ -47,7 +47,7 @@
 }
 
 .input-field input {
-  width: 93%;
+  width: 100%;
   padding: 14px;
   border: none;
   background-color: rgba(255, 255, 255, 0.15);
@@ -64,9 +64,9 @@
 }
 
 .signin-button {
-  width: 100%;
+  width: 93%;
   padding: 10px 15px;
-  background-color: #286928;
+  background-color: #399F2E;;
   color: white;
   text-transform: uppercase;
   cursor: pointer;
@@ -76,7 +76,7 @@
   align-items: center;
   gap: 10px;
   transition: all 0.3s ease;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+  
   font-family: 'Gameplay';
   font-size: 1rem;
   border: 4px solid #ffffff;
@@ -175,6 +175,12 @@
   .input-field input {
     padding: 12px;
     font-size: 0.9rem;
+    width: 100%;
+  }
+  
+  .signin-button {
+    /* Ensure full width for smaller screens */
+    /* Slightly reduce padding */
   }
 }
 
@@ -197,6 +203,7 @@
     padding: 10px;
     font-size: 0.85rem;
   }
+  
 }
 
 
