--- a/src/styles/SignupPage.css
+++ b/src/styles/SignupPage.css
@@ -51,7 +51,7 @@
   padding: 40px;
   width: 100%;
   max-width: 500px;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.6);
+  /* box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.6); */
   text-align: center;
   animation: fadeIn 0.5s ease-in-out;
   position: relative;
@@ -137,9 +137,9 @@
 }
 
 .signup-button {
-  width: 98.5%;
+  width: 93%;
   padding: 12px;
-  background-color: #286928;
+  background-color: #399F2E;;
   color: white;
   font-size: 1rem;
   border: 4px solid #ffffff;
