--- a/src/components/DiscArcadeModeGame.css
+++ b/src/components/DiscArcadeModeGame.css
@@ -140,9 +140,10 @@
 
 .normal-disc-stack img:nth-child(n),
 .bonus-disc-stack img:nth-child(n) {
-  z-index: calc(100 - n); 
-  left: calc(5px * n); 
+  z-index: calc(100 - var(--n, 1)); /* Use a CSS variable, default to 1 */
+  left: calc(5px * var(--n, 1)); /* Use the same fix for left positioning */
 }
+
 
 .normal-disc-stack h3,
 .bonus-disc-stack h3 {
